Improvements based on code review feedback.